# IncludeOS

./: .gitignore  activate.sh  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.py  conaninfo.txt  deactivate.sh  graph_info.json
api/: pmr
api/arch/aarch64/: delays.h  gpio.h  mbox.h  paging.hpp  uart.h
api/hw/: emmc.hpp  gpio.hpp  screen.hpp  sd.h
api/kernel/: threads.hpp
api/util/: alloc_pmr.hpp
cmake/: os.cmake
src/: CMakeLists.txt
src/arch/aarch64/: CMakeLists.txt  arch_start.asm  cpu.cpp  cpu.h  delays.c  exceptions.asm  linker.ld  page_table.asm  paging.cpp  paging_regs.hpp  syscall_entry.cpp  threads.asm
src/drivers/: CMakeLists.txt
src/fs/: fat.cpp
src/hw/: CMakeLists.txt  emmc.cpp  gpio.cpp  screen.cpp  sd.c
src/kernel/: CMakeLists.txt  kernel.cpp  service_stub.cpp  threads.cpp
src/musl/: open.cpp  write.cpp
src/platform/aarch64_vm/: CMakeLists.txt  bcm2835_gpio.cpp  bcm2835_gpio.hpp  bcm2835_rng.cpp  bcm2835_rng.hpp  bcm2835_timer.cpp  bcm2835_timer.hpp  bcm2836_irq.cpp  bcm2836_irq.hpp  bcm2836_local_irq.cpp  bcm2836_local_irq.hpp  debug.hpp  exception_handling.cpp  exception_handling.hpp  fdt.cpp  fdt.hpp  gic.cpp  init_libc.cpp  irq.hpp  kernel_start.cpp  mbox.c  mini_uart.cpp  mini_uart.h  os.cpp  platform.cpp  serial1.cpp  smp.cpp  smp.hpp  start_aarch64.asm  uart.c
src/plugins/: CMakeLists.txt
src/util/: CMakeLists.txt  memstream.c
